--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -107,6 +107,13 @@
           margin-bottom: 5px;
           margin-top: 25px;
           cursor: pointer;
+          transition: 0.4s;
+      }
+      
+      .registro label:hover {
+          text-shadow: 1px 1px 1px #5b0f4b;
+          animation: infinite;
+          transform: scale(1.05) translateY(-1px);
       }
       
       .datos input {
@@ -132,7 +139,7 @@
           padding: 15px;
           color: #124a24;
           font-size: 16px;
-          transform: .3s ease;
+          transition: 0.2s;
           background-color: #b4cc4e;
           border-radius: 15px;
           cursor: pointer;
@@ -141,6 +148,8 @@
       .enviar-cancelar:hover {
           color: #050405;
           background-color: #f5f5f5;
+          animation: infinite;
+          transform: scale(1.1) translateY(-1px);
       }
       
       .marcar {
