centrando opciones de letra

--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -195,7 +195,7 @@ select:hover{
 }
 .opCarta{
     font-family: "calibri";
-    margin: 0 180px 0 0;
+    margin: 0 200px 0 0;
     font-size: 23px;
     height: 30px;
 }
@@ -207,8 +207,12 @@ textarea{
 }
 
 .radio{
-    height: 20px;
-    width: 20px;
+
+    margin: 0 250px 0 0;
+}
+
+.opLetra{
+    margin: 0;
 }
 
 
