centrando opciones de color

--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -215,4 +215,17 @@ textarea{
     margin: 0;
 }
 
+#imprenta{
+    margin: 0 250px 20px 0;
+}
+#cletra{
+    margin: 0 50px 0px;
 
+}
+
+#colorP{
+    margin: 0 30px 0px 0;;
+}
+#colorL{
+    margin: 0 50px 0px 0;
+}
