--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -233,4 +233,14 @@ textarea{
 #botonF{
     margin: 50px 75px;
     padding: 0px 20px 0 700px;
+    height: 50px;
+}
+
+.opcionF{
+    font-size: 18px;
+    padding: 8px 18px;
+    border: 3px solid blueviolet ;
+    border-radius: 15px;
+    background-color: blueviolet;
+    margin: 0 10px;
 }
