--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -1,3 +1,6 @@
+body{
+    background-image: linear-gradient(40deg, #216e40, #7ccc4e);
+}
 header {
     display: flex;
     justify-content: space-between;
