--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -137,13 +137,13 @@ h2{
     width: 300px;
     height: 180px;
     grid-template-rows: 50px 50px 50px;
-    background-color: rgb(102, 44, 110);
+    background-color: #45b949;
     align-items: center;
     border-radius: 40px;
     transition: background-color 0.3s ease;
 }
 .caja_op:hover{
-    background-color:rgba(102, 44, 110, 0.281) ;
+    background-color: #88d88b;
 }
 
 .numF{
