--- a/registro html/registro_estilo.css
+++ b/registro html/registro_estilo.css
@@ -61,8 +61,9 @@
       }
       
       h1 {
-          font-family: Cambria;
-          font-size: 60px;
+          margin: 20px;
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 33px;
           color: rgba(255, 255, 255, 0.959);
           text-align: center;
           text-shadow: 10px 10px 4px #853a76;
