--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -242,13 +242,13 @@ textarea{
 .opcionF{
     font-size: 18px;
     padding: 8px 18px;
-    border: 3px solid blueviolet ;
+    border: 3px solid  #89b98b;
     border-radius: 15px;
-    background-color: blueviolet;
+    background-color: #89b98b;
     margin: 0 10px;
     transition: border-color 0.5s ease;
 }
 
 .opcionF:hover{
-    border-color: #ff0000;
+    border-color: #c4ebc5;
 }
