--- a/pedidos/css/style.css
+++ b/pedidos/css/style.css
@@ -91,6 +91,8 @@ h1{
     color: #0b4221;
     font-size: 45px;
     margin: 0;
+    text-shadow: 6px 6px 5px#1853363d;
+
 }
 
 p{
@@ -146,6 +148,8 @@ h2{
     color: #0b4221 ;
     font-size: 28px;
     margin: 0;
+    text-shadow: 6px 6px 5px#18533641;
+
 }
 
 .caja_op{
@@ -263,7 +267,7 @@ textarea{
     border-radius: 15px;
     background-color: #89b98b;
     margin: 0 10px;
-    transition: border-color 0.3s;
+    transition:0.3s;
 }
 
 .opcionF:hover{
